--- a/music_api/templates/index.html
+++ b/music_api/templates/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% load compress %}
+
+{% load static %}
+
 
 {% block content %}
 <div id="searchResults" class="search-container"></div>
