--- a/music_api/templates/users/playlists.html
+++ b/music_api/templates/users/playlists.html
@@ -1,27 +1,19 @@
 {% extends "base.html" %}
 
+{% load compress %}
+
+{% load static %}
 
 {% block title %}My Playlists - RubySound.fm{% endblock %}
 
 {% block content %}
 
 <div class="container mt-5">
-    <div class="row">
-        <div class="col-12">
-            <div class="d-flex justify-content-between align-items-center mb-4">
-                <!-- <h2>{{ playlist.title }}</h2> -->
-                <!-- <a href="{% url 'profile' %}" class="btn btn-outline-secondary">Back to Profile</a> -->
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-12">
-            <div id="playlists-root">
+    <div id="playlists-root">
                 {% if tracks %}
                     {% for track in tracks %}
-                        <div class="track-item-wrapper">
-                            <div class="track-item" data-track-name="{{ track.name|default:''|escape }}" data-track-artist="{{ track.artist|default:''|escape }}">
+                        <div class="track-item-playlist">
+                            <div class="track-playlist" data-track-name="{{ track.name|default:''|escape }}" data-track-artist="{{ track.artist|default:''|escape }}">
                                 <img
                                     src="{{ track.image_url|default:'/static/images/default.svg' }}"
                                     alt="{{ track.name|default:'Unknown track' }}"
@@ -58,15 +50,11 @@
                         </div>
                     {% endfor %}
                 {% else %}
-                    <div class="col-12">
-                        <div class="alert alert-secondary mb-0">
-                            You have no liked tracks yet.
-                        </div>
+                    <div class="alert alert-secondary mb-0">
+                        You have no liked tracks yet.
                     </div>
                 {% endif %}
             </div>
-        </div>
-    </div>
 </div>
 
 {% endblock %}
