--- a/music_api/templates/users/profile.html
+++ b/music_api/templates/users/profile.html
@@ -1,15 +1,18 @@
 {% extends "base.html" %}
 
+{% load compress %}
+
+{% load static %}
+
 {% block title %}Profile - RubySound.fm{% endblock %}
 
 {% block content %}
 
 <div class="container py-4">
-    <div class="row justify-content-center">
+    <div class="row justify-content-start">
         <div class="col-xl-9 col-lg-10">
 
             <div class="profile-page">
-
                 {% if messages %}
                     {% for message in messages %}
                         <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
@@ -56,7 +59,7 @@
                         </div>
 
                         <!-- RIGHT -->
-                        <div class="col-lg-8">
+                        <div class="col-lg-8 d-inline-block ps-5">
                             <div class="vstack gap-4">
 
                                 <section class="profile-widget">
@@ -64,17 +67,13 @@
 
                                     <div class="row g-3">
                                         <div class="col-md-6">
-                                            <div>
-                                                <label for="username" class="form-label">Имя</label>
-                                                <input type="text" class="form-control" value="{{ user.username }}" readonly>
-                                            </div>
+                                            <label for="username" class="form-label">Имя</label>
+                                            <input type="text" class="form-control" value="{{ user.username }}" readonly>
                                         </div>
 
                                         <div class="col-md-6">
-                                            <div>
-                                                <label for="email" class="form-label">Эл. почта</label>
-                                                <input type="email" class="form-control" value="{{ user.email }}" readonly>
-                                            </div>
+                                            <label for="email" class="form-label">Эл. почта</label>
+                                            <input type="email" class="form-control" value="{{ user.email }}" readonly>
                                         </div>
                                     </div>
 
@@ -134,7 +133,7 @@
                     </div>
 
                     <div class="d-flex justify-content-center mt-4">
-                        <button type="submit" class="btn btn-ruby-solid shadow-sm px-4">
+                        <button type="submit" class="btn btn-ruby-solid mt-4 shadow-sm px-4">
                             Сохранить изменения
                         </button>
                     </div>
