--- a/static/css/components.css
+++ b/static/css/components.css
@@ -65,6 +65,10 @@
     margin: 40px 0 4px 0;
 }
 
+.search-container {
+    margin-top: -0.8rem;
+}
+
 .track-image {
     border-radius: 7px;
     width: 88px;
